--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "deploy": "gh-pages -d build"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sass": "^1.84.0"
